Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8348322

AOT cache creation crashes with "All cached hidden classes must be aot-linkable" when AOTInvokeDynamicLinking is disabled

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3 P3
    • 25
    • 25
    • hotspot
    • b13

      AOT cache created with "XX:+AOTClassLinking -XX:-AOTInvokeDynamicLinking " crashes with

      # guarantee(succeed) failed: All cached hidden classes must be aot-linkable
      #
      # JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-internal-LTS-2025-01-21-1855105.katya...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-internal-LTS-2025-01-21-1855105.katya..., interpreted mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x5e19fc] AOTArtifactFinder::add_cached_instance_class(InstanceKlass*)+0x27c
      #



      Steps to reproduce
      > jdk25/fastdebug/bin/java -XX:+AOTClassLinking -XX:-AOTInvokeDynamicLinking -XX:AOTMode=record -XX:AOTConfiguration=jdk.aotconf -version
      > jdk25/fastdebug/bin/java -XX:+AOTClassLinking -XX:-AOTInvokeDynamicLinking -XX:AOTMode=create -XX:AOTConfiguration=jdk.aotconf -XX:AOTCache=jdk.aotcache

            ccheung Calvin Cheung (Inactive)
            epavlova Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: