src/hotspot/share/cds/aotClassLinker.cpp
@@ -143,7 +143,7 @@ bool AOTClassLinker::try_add_candidate(InstanceKlass* ik) {
   if (ik->is_hidden()) {
     assert(ik->shared_class_loader_type() != ClassLoader::OTHER, "must have been set");
     if (!CDSConfig::is_dumping_invokedynamic()) {
-      return false;
+      return true;
     }
     if (HeapShared::is_lambda_proxy_klass(ik)) {
       InstanceKlass* nest_host = ik->nest_host_not_null();
